frontend/snipbin/src/index.css
@import "tailwindcss";

:root {
  font-family: "DM Mono", serif;
  font-weight: 500;

  line-height: 1.5;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #141414;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@theme{
  --color-gray-custom: #242424;
  --color-black-custom: #141414;
  --color-highlight: #F58219;
  --padding-pc: 6rem;
}

.space-mono-regular {
  font-family: "Space Mono", serif;
  font-weight: 400;
  font-style: normal;
}

.space-mono-bold {
  font-family: "Space Mono", serif;
  font-weight: 700;
  font-style: normal;
}

.space-mono-regular-italic {
  font-family: "Space Mono", serif;
  font-weight: 400;
  font-style: italic;
}

.space-mono-bold-italic {
  font-family: "Space Mono", serif;
  font-weight: 700;
  font-style: italic;
}

.dm-mono-light {
  font-family: "DM Mono", serif;
  font-weight: 300;
  font-style: normal;
}

.dm-mono-regular {
  font-family: "DM Mono", serif;
  font-weight: 400;
  font-style: normal;
}

.dm-mono-medium {
  font-family: "DM Mono", serif;
  font-weight: 500;
  font-style: normal;
}

.dm-mono-light-italic {
  font-family: "DM Mono", serif;
  font-weight: 300;
  font-style: italic;
}

.dm-mono-regular-italic {
  font-family: "DM Mono", serif;
  font-weight: 400;
  font-style: italic;
}

.dm-mono-medium-italic {
  font-family: "DM Mono", serif;
  font-weight: 500;
  font-style: italic;
}

.bin-logo{
  background-image: url("./assets/snipbin-logo.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

pre::-webkit-scrollbar {
  height: 3px !important;
  opacity: 0 !important;
}

pre::-webkit-scrollbar-thumb {
  background: #606060 !important;
}

pre::-webkit-scrollbar:horizontal{
  opacity: 0;
}

/* pre:hover > pre::-webkit-scrollbar:horizontal {
  opacity: 100;
} */

